# CustomerData-API

./: .env  .gitignore  .pre-commit-config.yaml  README.md  customers.db  pyproject.toml  test.db
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: customers.py
app/utils/: logger.py
performance_tests/: README.md  locustfile.py
postman/: CustomerData-API-Postman-Collection.json  FastAPI-API-Postman-Collection.json
tests/: test_main.py
