[tool.poetry]
name = "customer-api"
version = "0.1.0"
description = "API to manage customer data"
authors = ["Jay"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.10.1"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"
httpx = "^0.27.2"
locust = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
